--- a/Segmenting and Clustering Neighborhoods in Toronto.ipynb
+++ b/Segmenting and Clustering Neighborhoods in Toronto.ipynb
@@ -324,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Removing rows in which the *Borough* field is \"Not assigned\" as it will not return any result in geocoder"
+    "#### Removing rows in which the *Borough* field is \"Not assigned\""
    ]
   },
   {
@@ -358,30 +358,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Status code Unknown from https://maps.googleapis.com/maps/api/geocode/json: ERROR - HTTPSConnectionPool(host='maps.googleapis.com', port=443): Read timed out. (read timeout=5.0)\n",
-      "Status code Unknown from https://maps.googleapis.com/maps/api/geocode/json: ERROR - HTTPSConnectionPool(host='maps.googleapis.com', port=443): Read timed out. (read timeout=5.0)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-16-19a3e760a4ea>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m         \u001b[0mlat_lng_coords\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlatlng\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[0mlatitude\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlat_lng_coords\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[0mlongitude\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlat_lng_coords\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
-     ]
-    }
-   ],
+   "source": [
+    "#### Geocoder was not being able to retrieve the latitude,longitude so we'll use the CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import geocoder # import geocoder\n",
     "\n",
@@ -391,33 +378,212 @@
     "\n",
     "# loop until you get the coordinates\n",
     "\n",
-    "for postal_code in postal_code:\n",
-    "    try:\n",
-    "        g = geocoder.google('{}, Toronto, Ontario'.format(postal_code))\n",
-    "        lat_lng_coords = g.latlng\n",
-    "    except:\n",
-    "        g = geocoder.google('{}, Toronto, Ontario'.format(postal_code))\n",
-    "        lat_lng_coords = g.latlng\n",
+    "#for postal_code in postal_code:\n",
+    "#    try:\n",
+    "#        for i in range(2):\n",
+    " #           g = geocoder.google('{}, Toronto, Ontario'.format(postal_code))\n",
+    " #           lat_lng_coords = g.latlng\n",
+    "#    except:\n",
+    " #       print(\"Error\")\n",
+    "        \n",
     "\n",
-    "latitude = lat_lng_coords[0]\n",
-    "longitude = lat_lng_coords[1]\n"
+    "#latitude = lat_lng_coords[0]\n",
+    "#longitude = lat_lng_coords[1]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "latitude,longitude"
+    "coord=pd.read_csv(r'https://cocl.us/Geospatial_data')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### After reading the .csv file, we'll merge the coord and data dfs into one"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data=pd.merge(data,coord,\n",
+    "        how='inner',\n",
+    "        on='Postal Code')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighbourhood</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M3A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Parkwoods</td>\n",
+       "      <td>43.753259</td>\n",
+       "      <td>-79.329656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M4A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Victoria Village</td>\n",
+       "      <td>43.725882</td>\n",
+       "      <td>-79.315572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M5A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Regent Park, Harbourfront</td>\n",
+       "      <td>43.654260</td>\n",
+       "      <td>-79.360636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M6A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Lawrence Manor, Lawrence Heights</td>\n",
+       "      <td>43.718518</td>\n",
+       "      <td>-79.464763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M7A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Queen's Park, Ontario Provincial Government</td>\n",
+       "      <td>43.662301</td>\n",
+       "      <td>-79.389494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>M8X</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>The Kingsway, Montgomery Road, Old Mill North</td>\n",
+       "      <td>43.653654</td>\n",
+       "      <td>-79.506944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>M4Y</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Church and Wellesley</td>\n",
+       "      <td>43.665860</td>\n",
+       "      <td>-79.383160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>M7Y</td>\n",
+       "      <td>East Toronto</td>\n",
+       "      <td>Business reply mail Processing Centre, South C...</td>\n",
+       "      <td>43.662744</td>\n",
+       "      <td>-79.321558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>M8Y</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Old Mill South, King's Mill Park, Sunnylea, Hu...</td>\n",
+       "      <td>43.636258</td>\n",
+       "      <td>-79.498509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>M8Z</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Mimico NW, The Queensway West, South of Bloor,...</td>\n",
+       "      <td>43.628841</td>\n",
+       "      <td>-79.520999</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>103 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Postal Code           Borough  \\\n",
+       "0           M3A        North York   \n",
+       "1           M4A        North York   \n",
+       "2           M5A  Downtown Toronto   \n",
+       "3           M6A        North York   \n",
+       "4           M7A  Downtown Toronto   \n",
+       "..          ...               ...   \n",
+       "98          M8X         Etobicoke   \n",
+       "99          M4Y  Downtown Toronto   \n",
+       "100         M7Y      East Toronto   \n",
+       "101         M8Y         Etobicoke   \n",
+       "102         M8Z         Etobicoke   \n",
+       "\n",
+       "                                         Neighbourhood   Latitude  Longitude  \n",
+       "0                                            Parkwoods  43.753259 -79.329656  \n",
+       "1                                     Victoria Village  43.725882 -79.315572  \n",
+       "2                            Regent Park, Harbourfront  43.654260 -79.360636  \n",
+       "3                     Lawrence Manor, Lawrence Heights  43.718518 -79.464763  \n",
+       "4          Queen's Park, Ontario Provincial Government  43.662301 -79.389494  \n",
+       "..                                                 ...        ...        ...  \n",
+       "98       The Kingsway, Montgomery Road, Old Mill North  43.653654 -79.506944  \n",
+       "99                                Church and Wellesley  43.665860 -79.383160  \n",
+       "100  Business reply mail Processing Centre, South C...  43.662744 -79.321558  \n",
+       "101  Old Mill South, King's Mill Park, Sunnylea, Hu...  43.636258 -79.498509  \n",
+       "102  Mimico NW, The Queensway West, South of Bloor,...  43.628841 -79.520999  \n",
+       "\n",
+       "[103 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
   },
   {
    "cell_type": "code",
